--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-<h1>This is mabel.</h1>
+
+<html>
+  <head>
+    <title>Mabel Ticketing</title>
+    <link rel="stylesheet" type="text/css" href="/assets/css/main.css"/>
+  </head>
+  <body>
+    <div class="container"><a href="https://github.com/mabelticketing/mabel"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Find me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"/></a>
+      <h1>Mabel</h1>
+      <p class="intro">A May Ball ticketing system.</p>
+      <section>
+        <p><b>Mabel</b> is a Raven-authenticated ticketing system. It allows high flexibility whilst being easy to use.</p>
+        <h2>What is included?</h2>
+        <p>fjsgldjgh sdkljg sdjk gsdjklf gjkh such as:</p>
+        <ul>
+          <li><b>Customisable ticket types</b> Queue-jump tickets? Charitable donations? Our admin panel allows your ticketing officer to create as many ticket types as you can think of.</li>
+          <li><b>Changeable ticketing permissions</b> Only want students from your college purchasing dining tickets? We have a flexible system for you to choose who can buy which tickets.</li>
+          <li><b>Separate ticket release dates</b> If you want to release tickets to your college first, you can!</li>
+          <li><b>Intelligent authentication</b> Raven authentication is used to determine ticketholder's colleges. Manual fallback for alumni or those without a raven account.</li>
+        </ul>
+        <h2>Using our system</h2>
+        <p>There are two methods of using Mabel. You can obtain the source code <b>for free</b> via our <a href="https://github.com/Hephistocles/mabel">GitHub repository</a> or you can have us implement the system for you. We charge £X per event. If you decide to run the code yourselves, perhaps consider donating.. here is our justgiving page</p>
+      </section>
+      <footer>&copy; Copyright Mabel Ticketing 2015.</footer>
+    </div>
+  </body>
+</html>
