--- a/index.html
+++ b/index.html
@@ -5,21 +5,97 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css"/>
   </head>
   <body>
-    <div class="container"><a href="https://github.com/mabelticketing/mabel"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Find me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"/></a>
-      <h1>Mabel</h1>
-      <p class="intro">A May Ball ticketing system.</p>
+    <div class="container content"><a href="https://github.com/mabelticketing/mabel"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Find me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"/></a>
       <section>
-        <p><b>Mabel</b> is a Raven-authenticated ticketing system. It allows high flexibility whilst being easy to use.</p>
-        <h2>What is included?</h2>
-        <p>fjsgldjgh sdkljg sdjk gsdjklf gjkh such as:</p>
-        <ul>
-          <li><b>Customisable ticket types</b> Queue-jump tickets? Charitable donations? Our admin panel allows your ticketing officer to create as many ticket types as you can think of.</li>
-          <li><b>Changeable ticketing permissions</b> Only want students from your college purchasing dining tickets? We have a flexible system for you to choose who can buy which tickets.</li>
-          <li><b>Separate ticket release dates</b> If you want to release tickets to your college first, you can!</li>
-          <li><b>Intelligent authentication</b> Raven authentication is used to determine ticketholder's colleges. Manual fallback for alumni or those without a raven account.</li>
-        </ul>
-        <h2>Using our system</h2>
-        <p>There are two methods of using Mabel. You can obtain the source code <b>for free</b> via our <a href="https://github.com/Hephistocles/mabel">GitHub repository</a> or you can have us implement the system for you. We charge £X per event. If you decide to run the code yourselves, perhaps consider donating.. here is our justgiving page</p>
+        <h1>Mabel</h1>
+        <p>A May Ball ticketing system.</p>
+        <p><b>Mabel</b> is a modern ticketing system designed especially for your May Ball, June Event or Garden Party. It was built from the ground up to be easy to use whilst giving your committee the power to quickly do everything they need.</p>
+      </section>
+      <section>
+        <h2>But I already have a ticketing system!</h2>
+        <p>Almost every committee has their own legacy system, passed on from one year to the next long after the original author has left. Nearly all of them have bugs and quirks, making the ticket booking experience error-prone or unreliable. In some cases, ticketing system bugs may actually be dangerous, as malicious users circumvent security systems.</p>
+        <p>Even if you’ve never had a problem with your ticketing system before, very few committees have the ability to update it in-house when new technologies appear. Can your ticketing system receive immediate online payments? Could it tie into electronic wristbands or a custom app for your event? Why waste your committee’s time by integrating these features when somebody else has already done it?</p>
+      </section>
+      <section>
+        <h2>What can Mabel do?</h2>
+        <div class="row">
+          <div class="col-sm-3">
+            <h3>Intelligent Authentication</h3>
+            <p>Mabel can use any authentication system you like. Raven support is built-in, and it is easy to extend Mabel to handle alumni or your college's own login system.</p>
+          </div>
+          <div class="col-sm-3">
+            <h3>Customisable ticket types</h3>
+            <p>Queue-jump? Dining? Punting? Early bird? Our admin panel allows you to create as many ticket types as you can think of.</p>
+          </div>
+          <div class="col-sm-3">
+            <h3>Changeable ticketing permissions</h3>
+            <p>Only want students from your college purchasing dining tickets? We have a flexible system for you to choose who can buy which tickets.</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-3">
+            <h3>Separate ticket release dates</h3>
+            <p>If you want to release tickets to your college before the rest of the university, you can!</p>
+          </div>
+          <div class="col-sm-3">
+            <h3>Make Mabel yours</h3>
+            <p>It’s easy to style Mabel to look exactly the way you want to, so your event’s theme can shine through when your guests buy their tickets.</p>
+          </div>
+          <div class="col-sm-3">
+            <h3>Rock-solid speed</h3>
+            <p>Mabel will handle hundreds of simultaneous users without breaking a sweat. So you can rest easy on launch night knowing nothing can go wrong.</p>
+          </div>
+          <div class="col-sm-3">
+            <h3>On the night</h3>
+            <p>No one likes queueing, which is why we’ve integrated a super fast ticket scanning system. Your guests will be through the door in record time.</p>
+          </div>
+        </div>
+      </section>
+      <section></section>
+      <h2>Using Mabel</h2>
+      <p>There are three ways to use Mabel. You can obtain the source code for free from our <a href="#">GitHub repository</a> - but then you’re on your own. If your committee lacks the technical capacity to do that, we can do it for you instead.
+        <table class="table">
+          <thead>
+            <tr>
+              <th></th>
+              <th>Community</th>
+              <th>Basic</th>
+              <th>Premium</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th>Details</th>
+              <td>
+                <p>Mabel is released under the open-source GPL license. That means you can use the code for free, as long as you share any modifications you make back with us.</p>
+                <p>If you’re not making modifications, please consider making a donation to support the project’s ongoing development. [link to easy to use donation giver page - suggested donation should be listed on that page]</p>
+              </td>
+              <td>
+                <p>We can set up the system for you, and show you how to use it.[say some more about support]</p>
+              </td>
+              <td>
+                <p>We will set up the system and make custom modifications for you as required. This also includes the ability to receive online payments, so your committee can receive their money a few days after launch night.</p>
+              </td>
+            </tr>
+            <tr>
+              <th>Support</th>
+              <td>cross None</td>
+              <td>tick some</td>
+              <td>ticktick Loads</td>
+            </tr>
+            <tr>
+              <th>Price</th>
+              <td>Free</td>
+              <td>One-off fee of £500</td>
+              <td>3% of ticket sale price per ticket</td>
+            </tr>
+          </tbody>
+        </table>
+      </p>
+      <section>
+        <h2>Creators</h2>
+        <p>Christopher and Thomas are Computer Scientists at Emmanuel College. Both love pretty things, hate wasted time and can’t get enough JavaScript.</p>
+        <p>Want to know more? Drop us an email at hello@mabelticketing.co.uk</p>
       </section>
       <footer>&copy; Copyright Mabel Ticketing 2015.</footer>
     </div>
