Slightly more thoughtful colours. Still don't like the header

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p class="big-central-text"><b>Mabel</b> is a modern ticketing system designed especially for your May Ball, June
                  Event or Garden Party. It is easy to use, and gives
                  your committee the power to quickly do everything 
-                 they need to.
+                 it needs to.
               </p>
               <div class="row">
                 <div class="col-md-6"><a href="https://github.com/mabelticketing/mabel" target="_blank" class="btn btn-default btn-lg"><span class="fa fa-code"></span> source</a></div>
