Include icon colours in the update

--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
         <h2>What can Mabel do?</h2>
         <!-- TODO: Better colours-->
         <div class="row">
-          <div class="col-sm-4 whatbox"><span style="background-color:red" class="fa fa-rocket"></span>
+          <div class="col-sm-4 whatbox"><span class="fa fa-rocket icon1"></span>
             <h4>Rock-solid speed</h4>
             <p>Mabel will handle hundreds of simultaneous users without breaking a sweat. So you can rest easy on launch night knowing nothing can go wrong.</p>
           </div>
-          <div class="col-sm-4 whatbox"><span style="background-color:blue" class="fa fa-moon-o"></span>
+          <div class="col-sm-4 whatbox"><span class="fa fa-moon-o icon2"></span>
             <h4>On the night</h4>
             <p>No one likes queueing, which is why we’ve integrated a super fast ticket scanning system. Your guests will be through the door in record time.</p>
           </div>
-          <div class="col-sm-4 whatbox"><span style="background-color:green" class="fa fa-paint-brush"></span>
+          <div class="col-sm-4 whatbox"><span class="fa fa-paint-brush icon3"></span>
             <h4>Make Mabel yours</h4>
             <p>It’s easy to style Mabel to look exactly the way you want to, so your event’s theme can shine through when your guests buy their tickets.</p>
           </div>
