Update header to have less content. TODO: Not perfectly responsive.

--- a/index.html
+++ b/index.html
@@ -14,18 +14,8 @@
           </div>
           <div class="col-sm-6">
             <div class="titlebox">
-              <div class="mabel-logo">
-                <h1>Mabel</h1>
-              </div>
-              <p class="big-central-text"><b>Mabel</b> is a modern ticketing system designed especially for your May Ball, June
-                 Event or Garden Party. It is easy to use, and gives
-                 your committee the power to quickly do everything 
-                 it needs to.
-              </p>
-              <div class="row">
-                <div class="col-md-6"><a href="https://github.com/mabelticketing/mabel" target="_blank" class="btn btn-default btn-lg"><span class="fa fa-code"></span> source</a></div>
-                <div class="col-md-6"><a href="#whatmain" class="btn btn-default btn-lg"><span class="fa fa-angle-down"></span> read more</a></div>
-              </div>
+              <h1 class="logo">mabel<span>.</span></h1>
+              <h3>Ticketing for the future<span>.</span></h3><a href="https://github.com/mabelticketing/mabel" target="_blank" class="action one"><span class="fa fa-code"></span> <span class="words">Download</span></a><a href="#whatmain" class="action two"><span class="fa fa-angle-down"></span>&nbsp;<span class="words">Learn&nbsp;more</span></a>
             </div>
           </div>
         </div>
