--- a/index.html
+++ b/index.html
@@ -4,19 +4,23 @@
     <title>Mabel - A May Ball ticketing system</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"/>
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
   </head>
   <body>
     <header>
       <div class="container">
         <div class="row">
-          <div class="col-sm-6">
+          <div class="col-md-6 screenshot-desktop">
             <p>[Screenshots on a mac or something here]</p>
           </div>
-          <div class="col-sm-6">
+          <div class="col-md-6">
             <div class="titlebox">
               <h1 class="logo">mabel<span>.</span></h1>
               <h3>Ticketing for the future<span>.</span></h3><a href="https://github.com/mabelticketing/mabel" target="_blank" class="action one"><span class="fa fa-code"></span> <span class="words">Download</span></a><a href="#whatmain" class="action two"><span class="fa fa-angle-down"></span>&nbsp;<span class="words">Learn&nbsp;more</span></a>
             </div>
+          </div>
+          <div class="col-md-6 screenshot-mobile">
+            <p>[Screenshots on a mac or something here]</p>
           </div>
         </div>
         <div style="background-image:url(assets/img/bg2.jpg)" class="bg"></div>
@@ -27,15 +31,15 @@
         <h2>What can Mabel do?</h2>
         <!-- TODO: Better colours-->
         <div class="row">
-          <div class="col-sm-4 whatbox"><span class="fa fa-rocket icon1"></span>
+          <div class="col-md-4 whatbox"><span class="fa fa-rocket icon1"></span>
             <h4>Rock-solid speed</h4>
             <p>Mabel will handle hundreds of simultaneous users without breaking a sweat. So you can rest easy on launch night knowing nothing can go wrong.</p>
           </div>
-          <div class="col-sm-4 whatbox"><span class="fa fa-moon-o icon2"></span>
+          <div class="col-md-4 whatbox"><span class="fa fa-moon-o icon2"></span>
             <h4>On the night</h4>
             <p>No one likes queueing, which is why we’ve integrated a super fast ticket scanning system. Your guests will be through the door in record time.</p>
           </div>
-          <div class="col-sm-4 whatbox"><span class="fa fa-paint-brush icon3"></span>
+          <div class="col-md-4 whatbox"><span class="fa fa-paint-brush icon3"></span>
             <h4>Make Mabel yours</h4>
             <p>It’s easy to style Mabel to look exactly the way you want to, so your event’s theme can shine through when your guests buy their tickets.</p>
           </div>
@@ -59,22 +63,30 @@
       <div class="container">
         <h3>More Features</h3>
         <div class="row">
-          <div class="col-sm-6 whatboxsm"><span class="fa fa-ticket"></span>
-            <h4>Customisable ticket types</h4>
+          <div class="col-md-6 whatboxsm">
+            <div class="title"><span class="fa fa-ticket"></span>
+              <h4><span class="h"> Customisable ticket types</span></h4>
+            </div>
             <p>Queue-jump? Dining? Punting? Early bird? Our admin panel allows you to create as many ticket types as you can think of, and restrict exactly who can buy them.</p>
           </div>
-          <div class="col-sm-6 whatboxsm"><span class="fa fa-mobile"></span>
-            <h4>Mobile</h4>
+          <div class="col-md-6 whatboxsm">
+            <div class="title"><span class="fa fa-mobile"></span>
+              <h4><span class="h"> Mobile</span></h4>
+            </div>
             <p>We optimise Mabel for mobile, so students can book their tickets from the comfort of the college library.</p>
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-6 whatboxsm"><span class="fa fa-lightbulb-o"></span>
-            <h4>Intelligent Authentication</h4>
+          <div class="col-md-6 whatboxsm">
+            <div class="title"><span class="fa fa-lightbulb-o"></span>
+              <h4><span class="h">Intelligent Authentication</span></h4>
+            </div>
             <p>Mabel can use any authentication system you like. Raven support is built-in, and it is easy to extend Mabel to handle alumni or your college's own login system.</p>
           </div>
-          <div class="col-sm-6 whatboxsm"><span class="fa fa-calendar-check-o"></span>
-            <h4>Separate ticket release dates</h4>
+          <div class="col-md-6 whatboxsm">
+            <div class="title"><span class="fa fa-calendar-check-o"></span>
+              <h4><span class="h"> Separate ticket release dates</span></h4>
+            </div>
             <p>If you want to release tickets to your college before the rest of the university, you can!</p>
           </div>
         </div>
@@ -132,11 +144,11 @@
       <div class="container">
         <h2>Creators</h2>
         <div class="row">
-          <div class="col-sm-12 col-md-3 col-md-offset-3 thumb"><img src="/assets/img/tom.jpg"/></div>
-          <div class="col-sm-12 col-md-3 thumb"><img src="/assets/img/chris.jpg"/></div>
+          <div class="col-xs-6 col-md-4 thumb col-md-offset-2"><img src="/assets/img/tom.jpg"/></div>
+          <div class="col-xs-6 col-md-4 thumb"><img src="/assets/img/chris.jpg"/></div>
         </div>
         <div class="row">
-          <div class="col-sm-12 col-md-6 col-md-offset-3 big-central-text">
+          <div class="col-xs-12 col-md-8 col-md-offset-2 big-central-text">
             <p>Christopher and Tom are Computer Scientists at Emmanuel College. Both love pretty things, hate wasted time and can’t get enough JavaScript.</p>
             <p>TODO: Emphasise May Ball experience more</p>
           </div>
