--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
           </div>
           <div class="col-md-6">
             <div class="titlebox">
-              <h1 class="logo">mabel<span>.</span></h1>
-              <h3>Ticketing for the future<span>.</span></h3><a href="https://github.com/mabelticketing/mabel" target="_blank" class="action one"><span class="fa fa-code"></span> <span class="words">Download</span></a><a href="#whatmain" class="action two"><span class="fa fa-angle-down"></span>&nbsp;<span class="words">Learn&nbsp;more</span></a>
+              <h1 class="logo">mabel<span class="red">.</span></h1>
+              <h3>May Ball ticketing for the future.</h3><a href="https://github.com/mabelticketing/mabel" target="_blank" class="action one"><span class="fa fa-code"></span> <span class="words">Download</span></a><a href="#whatmain" class="action two"><span class="fa fa-angle-down"></span>&nbsp;<span class="words">Learn&nbsp;more</span></a>
             </div>
           </div>
           <div class="col-md-6 screenshot-mobile">
@@ -31,15 +31,15 @@
         <h2>What can Mabel do?</h2>
         <!-- TODO: Better colours-->
         <div class="row">
-          <div class="col-md-4 whatbox"><span class="fa fa-rocket icon1"></span>
-            <h4>Rock-solid speed</h4>
+          <div class="col-md-4 whatbox"><span class="fa fa-rocket"></span>
+            <h4>Rocket-fast speed</h4>
             <p>Mabel will handle hundreds of simultaneous users without breaking a sweat. So you can rest easy on launch night knowing nothing can go wrong.</p>
           </div>
-          <div class="col-md-4 whatbox"><span class="fa fa-moon-o icon2"></span>
+          <div class="col-md-4 whatbox"><span class="fa fa-moon-o"></span>
             <h4>On the night</h4>
             <p>No one likes queueing, which is why we’ve integrated a super fast ticket scanning system. Your guests will be through the door in record time.</p>
           </div>
-          <div class="col-md-4 whatbox"><span class="fa fa-paint-brush icon3"></span>
+          <div class="col-md-4 whatbox"><span class="fa fa-paint-brush"></span>
             <h4>Make Mabel yours</h4>
             <p>It’s easy to style Mabel to look exactly the way you want to, so your event’s theme can shine through when your guests buy their tickets.</p>
           </div>
@@ -51,7 +51,8 @@
         <h2>But I already have a ticketing system!</h2>
         <div class="row">
           <div class="col-md-6">
-            <p>Almost every committee has their own legacy system, passed on from one year to the next long after the original author has left. Nearly all of them have bugs and quirks, making the ticket booking experience error-prone or unreliable. In some cases, ticketing system bugs may actually be dangerous, as malicious users circumvent security systems.</p>
+            <p>Most committees have their own legacy system, passed on from year to year long after the original author has left. Nearly all of them have bugs and quirks, making the ticket booking experience error-prone or unreliable. In some cases, ticketing system bugs may actually be dangerous, as malicious users circumvent security systems.</p>
+            <p>The idea of Mabel is to have a ticketing system that is used by many colleges, contributed to by any interested computer-savvy students. This way, in the unlikely event that Mabel has flaws, they can be ironed out quickly and safely.</p>
           </div>
           <div class="col-md-6">
             <p>Even if you’ve never had a problem with your ticketing system before, very few committees have the ability to update it in-house when new technologies appear. Can your ticketing system receive immediate online payments? Could it tie into electronic wristbands or a custom app for your event? Why waste your committee’s time by integrating these features when somebody else has already done it?</p>
@@ -65,15 +66,15 @@
         <div class="row">
           <div class="col-md-6 whatboxsm">
             <div class="title"><span class="fa fa-ticket"></span>
-              <h4><span class="h"> Customisable ticket types</span></h4>
+              <h4><span class="h"> Customisable ticket options</span></h4>
             </div>
-            <p>Queue-jump? Dining? Punting? Early bird? Our admin panel allows you to create as many ticket types as you can think of, and restrict exactly who can buy them.</p>
+            <p>Queue-jump? Punting? Early bird? Our admin panel allows you to create as many ticket types as you can think of, and decide exactly who can buy them and at the times you want. [check]</p>
           </div>
           <div class="col-md-6 whatboxsm">
             <div class="title"><span class="fa fa-mobile"></span>
-              <h4><span class="h"> Mobile</span></h4>
+              <h4><span class="h"> Mobile first</span></h4>
             </div>
-            <p>We optimise Mabel for mobile, so students can book their tickets from the comfort of the college library.</p>
+            <p>Mabel looks great on mobile, so students can book their tickets from the comfort of their college library.</p>
           </div>
         </div>
         <div class="row">
@@ -84,10 +85,10 @@
             <p>Mabel can use any authentication system you like. Raven support is built-in, and it is easy to extend Mabel to handle alumni or your college's own login system.</p>
           </div>
           <div class="col-md-6 whatboxsm">
-            <div class="title"><span class="fa fa-calendar-check-o"></span>
-              <h4><span class="h"> Separate ticket release dates</span></h4>
+            <div class="title"><span class="fa fa-balance-scale"></span>
+              <h4><span class="h"> Fair ticketing</span></h4>
             </div>
-            <p>If you want to release tickets to your college before the rest of the university, you can!</p>
+            <p>Everyone is delivered the ticketing form at the same time, so that no one is left out.[check] When tickets are sold out any new bookings will be added to a waiting list, so you can still allocate tickets on a first-come first-served basis.</p>
           </div>
         </div>
       </div>
@@ -97,32 +98,32 @@
         <h2>Using Mabel</h2>
         <div class="row">
           <div class="col-md-offset-2 col-md-8">
-            <p style="text-align:center">There are three ways to use Mabel. You can obtain the source code for free from our <a href="#">GitHub repository</a>—but then you’re on your own. If that sounds like too much trouble, we can do it for you instead.</p>
+            <p style="text-align:center">There are three ways to use Mabel. You can obtain the source code for free from our <a href="#">GitHub repository</a> — but then you’re on your own. If that sounds like too much trouble, we can do it for you instead.</p>
           </div>
         </div>
         <div class="row">
           <div class="col-md-4">
             <div class="pricing-card">
               <h5>Community</h5>
-              <h6>Free </h6>
+              <h6>Free</h6>
               <hr/>
-              <p>Source Code Available (GPL) </p>
-              <p>No Hosting</p>
-              <p>No Support</p>
-              <p>No Online Payments</p>
-              <button class="btn">Get it</button>
+              <p>Source code available (GPLv2.0)</p>
+              <p class="blanked">Hosting</p>
+              <p class="blanked">Setup and maintenance support</p>
+              <p class="blanked">Customisation support</p>
+              <p class="blanked">Online payments</p><a href="https://github.com/mabelticketing/mabel" target="_blank" class="btn btn-default">Get it</a>
             </div>
           </div>
           <div class="col-md-4">
             <div class="pricing-card">
               <h5>Basic</h5>
-              <h6>£400 / year</h6>
+              <h6>£400 / event</h6>
               <hr/>
-              <p>Source Code Available (GPL) </p>
-              <p>Hosting Included </p>
-              <p>Support for Setup only</p>
-              <p>No Online Payments</p>
-              <button class="btn">Get it</button>
+              <p>Source code available (GPLv2.0)</p>
+              <p>Hosting</p>
+              <p>Setup and maintenance support</p>
+              <p class="blanked">Customisation support</p>
+              <p class="blanked">Online payments</p><a href="mailto:hello@mabelticketing.co.uk" target="_blank" class="btn btn-default">Get it</a>
             </div>
           </div>
           <div class="col-md-4">
@@ -130,11 +131,11 @@
               <h5>Premium</h5>
               <h6>3% of Ticket Sales</h6>
               <hr/>
-              <p>Source Code Available (GPL) </p>
-              <p>Hosting Included </p>
-              <p>Setup & Customisation Support</p>
-              <p>Online Payments Included </p>
-              <button class="btn">Get it</button>
+              <p>Source code available (GPLv2.0)</p>
+              <p>Hosting</p>
+              <p>Setup and maintenance support</p>
+              <p>Customisation support</p>
+              <p>Online payments</p><a href="mailto:hello@mabelticketing.co.uk" target="_blank" class="btn btn-default">Get it</a>
             </div>
           </div>
         </div>
@@ -149,15 +150,20 @@
         </div>
         <div class="row">
           <div class="col-xs-12 col-md-8 col-md-offset-2 big-central-text">
-            <p>Christopher and Tom are Computer Scientists at Emmanuel College. Both love pretty things, hate wasted time and can’t get enough JavaScript.</p>
-            <p>TODO: Emphasise May Ball experience more</p>
+            <p>Chris and Tom have got tonnes of experience working on May Balls and June Events.</p>
+            <p>Chris has worked as publicity officer on the Emma May Ball in 2013, as well as being president of the Emma June Event 2014. Tom joined Chris in 2015 to create a new ticketing system for the Emma May Ball.</p>
+            <p>They currently both study Computer Science at Emmanuel College.</p>
           </div>
         </div>
       </div>
     </section>
     <section id="more">
       <div class="container">
-        <p>Want to learn more? Drop us an email at <a href="mailto:hello@mabelticketing.co.uk" class="mail-link">hello@mabelticketing.co.uk</a></p>
+        <div class="row">
+          <div class="col-xs-12">
+            <p>Want to learn more? Chat to us at <a href="mailto:hello@mabelticketing.co.uk" class="mail-link">hello@mabelticketing.co.uk</a></p>
+          </div>
+        </div>
       </div>
     </section>
     <footer>
